@@ -22,7 +22,21 @@
 
 /*
  *  @test
- *  @run testng GlobalMarkTest
+ *  @library /lib /
+ *  @build sun.hotspot.WhiteBox
+ *  @build ClassFileInstaller
+ *  @run driver ClassFileInstaller sun.hotspot.WhiteBox
+ *                                 sun.hotspot.WhiteBox$WhiteBoxPermission
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+UseSerialGC GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+UseParallelOldGC GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+UseConcMarkSweepGC GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+UseConcMarkSweepGC -XX:CMSFullGCsBeforeCompaction=1 GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+UseG1GC GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+ExplicitGCInvokesConcurrent -XX:+UseSerialGC GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+ExplicitGCInvokesConcurrent -XX:+UseParallelOldGC GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+ExplicitGCInvokesConcurrent -XX:+UseConcMarkSweepGC GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+ExplicitGCInvokesConcurrent -XX:+UseConcMarkSweepGC -XX:CMSFullGCsBeforeCompaction=1 GlobalMarkTest
+ *  @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC GlobalMarkTest
  *  @summary Test an object is pointed by the stack of continuation, and it will not collect by GC
  *           when the continuation is not running.
  */
@@ -30,6 +44,7 @@
 import java.lang.ref.Reference;
 import java.lang.ref.ReferenceQueue;
 import java.lang.ref.WeakReference;
+import sun.hotspot.WhiteBox;
 import org.testng.annotations.Test;
 import static org.testng.Assert.*;
 
@@ -37,27 +52,26 @@ public class GlobalMarkTest {
     static long count = 0;
     static ContinuationScope scope = new ContinuationScope("test");
 
+    static Runnable target = new Runnable() {
+        public void run() {
+            String tmp_str = new String("string in continuation");
+            ReferenceQueue<String> queue = new ReferenceQueue<>();
+            WeakReference<String> str_weak_ref = new WeakReference<>(tmp_str, queue);
+            Continuation.yield(scope);
+
+            Reference<? extends String> str_ref = queue.poll();
+            assertEquals(str_ref, null);
+            System.out.println("tmp_str : " + tmp_str + ", is not collected by GC");
+            tmp_str = null;
+            Continuation.yield(scope);
+
+            str_ref = queue.poll();
+            System.out.println("str_ref : " + str_ref);
+            assertNotEquals(str_ref, null);
+        }
+    };
     @Test
     public static void foo() throws Exception {
-        Runnable target = new Runnable() {
-            public void run() {
-                String tmp_str = new String("string in continuation");
-                ReferenceQueue<String> queue = new ReferenceQueue<>();
-                WeakReference<String> str_weak_ref = new WeakReference<>(tmp_str, queue);
-                Continuation.yield(scope);
-
-                Reference<? extends String> str_ref = queue.poll();
-                assertEquals(str_ref, null);
-                System.out.println("tmp_str : " + tmp_str + ", is not collected by GC");
-                tmp_str = null;
-                Continuation.yield(scope);
-
-                str_ref = queue.poll();
-                System.out.println("str_ref : " + str_ref);
-                assertNotEquals(str_ref, null);
-            }
-        };
-
         Thread thread = new Thread(){
             public void run() {
                 Continuation cont = new Continuation(scope, target);
@@ -88,25 +102,6 @@ public class GlobalMarkTest {
 
     @Test
     public static void bar() throws Exception {
-        Runnable target = new Runnable() {
-            public void run() {
-                String tmp_str = new String("string in continuation");
-                ReferenceQueue<String> queue = new ReferenceQueue<>();
-                WeakReference<String> str_weak_ref = new WeakReference<>(tmp_str, queue);
-                Continuation.yield(scope);
-
-                Reference<? extends String> str_ref = queue.poll();
-                assertEquals(str_ref, null);
-                System.out.println("tmp_str : " + tmp_str + ", is not collected by GC");
-                tmp_str = null;
-                Continuation.yield(scope);
-
-                str_ref = queue.poll();
-                System.out.println("str_ref : " + str_ref);
-                assertNotEquals(str_ref, null);
-            }
-        };
-
         Continuation cont = new Continuation(scope, target);
         System.out.println("Continuation create in " + Thread.currentThread().getName());
 
@@ -126,6 +121,34 @@ public class GlobalMarkTest {
         cont.run();
 
         System.gc();
+        Thread.sleep(100);
+        thread2.start();
+        thread2.join();
+    }
+
+    @Test
+    public static void test_young_gc() throws Exception {
+        WhiteBox WB = WhiteBox.getWhiteBox();
+
+        Continuation cont = new Continuation(scope, target);
+        System.out.println("Continuation create in " + Thread.currentThread().getName());
+
+        Runnable r = new Runnable() {
+            public void run() {
+                cont.run();
+            }
+        };
+        Thread thread1 = new Thread(r);
+        Thread thread2 = new Thread(r);
+
+        thread1.start();
+        thread1.join();
+
+        WB.youngGC();
+        Thread.sleep(100);
+        cont.run();
+
+        WB.youngGC();
         Thread.sleep(100);
         thread2.start();
         thread2.join();
